handle main steps for (merge and radix)